# Groundline

./: .env.example  .gitignore  README.md  hatch_build.py  pyproject.toml  run.bat  run.sh  tui.py
configs/: demo.yaml  e2e.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  builder.spec.ts  full-stack.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  charts.tsx  components.test.tsx  components.tsx  main.tsx  material-elements.d.ts  md.ts  styles.css  theme.css  types.ts
frontend/src/builder/: ExperimentBuilder.tsx  builder.test.tsx
frontend/src/dashboard/: DashboardView.tsx
frontend/src/shell/: NavigationRail.tsx
frontend/src/views/: ExperimentsView.tsx  RunView.tsx
scripts/: serve_e2e.py
src/distortion_engine/: __init__.py  cli.py  config.py
src/distortion_engine/api/: __init__.py  app.py  jobs.py  models.py
src/distortion_engine/domain/: __init__.py  reports.py
src/distortion_engine/events/: __init__.py  (+2 more)
src/groundline/: __init__.py  cli.py  config.py
tests/: test_cli.py  test_config.py  test_tui_env.py
tests/api/: test_app.py
tests/events/: test_canonical.py
tests/experiments/: test_analysis.py  test_experiment.py
tests/metrics/: test_epistemic.py  test_outcomes.py
tests/observation/: test_observations.py
tests/organization/: test_topology.py
tests/policy/: test_factory.py  test_openai_compat_policy.py
tests/simulation/: test_run_and_replay.py
tests/statistics/: test_inference.py
tests/world/: test_world_engine.py
(+59 files in other folders)
