[project]
name = "distortion-engine"
dynamic = ["version"]
description = "Causal evaluation environment for hierarchical language-agent organizations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=2.2,<3",
  "pandas>=2.2,<4",
  "pyarrow>=19,<25",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6,<7",
  "scipy>=1.15,<2",
  "statsmodels>=0.14,<1",
  "rich>=14,<15",
  "typer>=0.16,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
distortion = "distortion_engine.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.130,<7",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.26,<2",
  "ruff>=0.11,<1",
  "pandas-stubs>=2.2,<4",
  "types-PyYAML>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/distortion_engine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/distortion_engine"]

[tool.hatch.build.hooks.custom]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["live: requires external OpenAI-compatible provider API access"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/distortion_engine/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["distortion_engine"]
